add comments function & toggle

--- a/flask_page/templates/index.html
+++ b/flask_page/templates/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Web Vulnerability Analysis</h1>
     <a href="{{ url_for('input_tag_bp.input_tag') }}">Input Tag Analysis</a>
+    <a href="{{ url_for('comments_bp.comments') }}">Comments Analysis</a>
   </body>
 </html>
