--- a/flask_page/templates/comments_result.html
+++ b/flask_page/templates/comments_result.html
@@ -3,12 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comments Analysis Result</title>
+    <title>WVA Tools</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      .grid-cell {
+        width: 100px;
+        height: 100px;
+      }
+      h2{
+        font-size: 1.125rem;
+        line-height: 1.75rem;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Comments Analysis Result</h1>
-    <p><a href="/comments">Go back to Comments Page</a></p>
-    <p><a href="/">Go back to Home Page</a></p>
+  <body class="bg-gray-50 text-gray-900 font-sans">
+    <header class="bg-white shadow">
+      <nav
+        class="container mx-auto px-6 py-3 flex justify-between items-center"
+      >
+        <a href="/" class="text-3xl font-bold text-blue-600">WVA</a>
+        <div class="space-x-4">
+          <a
+            href="{{ url_for('input_tag_bp.input_tag') }}"
+            class="text-gray-500 hover:text-blue-600 font-bold"
+            >Input Tag Crawl</a
+          >
+          <a
+            href="{{ url_for('comments_bp.comments') }}"
+            class="text-blue-600 font-bold"
+            >Comments Crawl</a
+          >
+          <a
+            href="/method-check"
+            class="text-gray-500 hover:text-blue-600 font-bold"
+            >Method Check</a
+          >
+          <a
+            href="/directory-listing"
+            class="text-gray-500 hover:text-blue-600 font-bold"
+            >Directory Listing</a
+          >
+          <a
+            href="/sql-injection"
+            class="text-gray-500 hover:text-blue-600 font-bold"
+            >Sql Injection</a
+          >
+          <a href="/xss" class="text-gray-500 hover:text-blue-600 font-bold"
+            >XSS</a
+          >
+        </div>
+      </nav>
+    </header>
+    <h1 class="font-bold text-blue-600 text-3xl flex justify-center m-5">
+      Comments Crawl Result
+    </h1>
+    <p class="flex justify-center text-gray-500">
+      Result of crawling the site with the dfs algorithm.
+    </p>
+    <div class="flex flex-row justify-center">
+      <div class="flex flex-col mx-5 justify-center">
+        <a
+          href="/comments"
+          class="my-2 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          >Go back to Comments Crawl Page</a
+        >
+        <a
+          href="/"
+          class="mt-2 mb-4 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          >Go back to Home Page</a
+        >
+      </div>
+    </div>
+    <hr  />
     {{ result_html|safe }}
+    <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-300 flex justify-between">
+      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
+      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
+    </footer>
   </body>
 </html>
