--- a/flask_page/templates/index.html
+++ b/flask_page/templates/index.html
@@ -72,7 +72,7 @@
             class="col-span-6 row-span-4 bg-gray-300 flex items-center justify-center blur-edge"
           >
             <img
-              src="https://source.unsplash.com/600x400/?cybersecurity"
+              src="https://source.unsplash.com/600x400/?programing"
               alt="Web Security img"
               class="max-w-full h-auto"
             />
@@ -80,6 +80,7 @@
         </div>
       </section>
     </main>
+    <a class="flex justify-center text-2xl font-bold mb-4">---🔧Tools🔧---</a>
     <div class="flex flex-row mx-5 justify-center text-center">
       <a
         class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
