--- a/flask_page/templates/input_tag.html
+++ b/flask_page/templates/input_tag.html
@@ -57,8 +57,9 @@
     <h1 class="font-bold text-blue-600 text-3xl flex justify-center m-5">
       Input Tag Crawl
     </h1>
-    <p class="flex justify-center text-gray-500 m-5">
-      It will crawl all linked website with dfs algorithm.
+    <p class="flex justify-center text-gray-500 m-5 text-center">
+      It will crawl all linked website with dfs algorithm.<br>
+      So, it may take some minute.
     </p>
     <div class="flex justify-center w-screeen">
       <form method="post" action="{{ url_for('input_tag_bp.input_tag') }}">
