--- a/flask_page/templates/index.html
+++ b/flask_page/templates/index.html
@@ -16,7 +16,7 @@
       }
     </style>
   </head>
-  <body class="bg-gray-50 text-gray-900 font-sans">
+  <body class="bg-gray-50 text-gray-900 font-sans overflow-x-hidden">
     <header class="bg-white shadow">
       <nav
         class="container mx-auto px-6 py-3 flex justify-between items-center"
@@ -116,7 +116,7 @@
       </a>
     </div>
 
-    <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-30 flex justify-between">
+    <footer class="bg-white shadow mt-12 relative bottom-0 w-full border-y-1 border-gray-30 flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
       <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
     </footer>
