compare input&comments

--- a/flask_page/templates/input_tag.html
+++ b/flask_page/templates/input_tag.html
@@ -75,14 +75,14 @@
         </div>
         <button
           type="submit"
-          class="mb-4 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
+          class="mb-4 bg-blue-600 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
         >
           Submit
         </button>
         <p>
           <a
             href="/"
-            class="my-2 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
+            class="my-2 bg-blue-600 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
             >Go back to Home Page</a
           >
         </p>
@@ -90,7 +90,7 @@
     </div>
     <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-300 flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
-      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
+      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600"></a>
     </footer>
   </body>
 </html>
