--- a/flask_page/templates/index.html
+++ b/flask_page/templates/index.html
@@ -83,42 +83,42 @@
     <a class="flex justify-center text-2xl font-bold mb-4">---🔧Tools🔧---</a>
     <div class="flex flex-row mx-5 justify-center text-center">
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
         href="{{ url_for('input_tag_bp.input_tag') }}"
       >
-        Input Tag Crawl
+      ✏️ Input Tag Crawl
       </a>
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
         href="{{ url_for('comments_bp.comments') }}"
       >
-        Comments Crawl
+      📒 Comments Crawl
       </a>
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
       >
-        Method Check
+        💬 Method Check
       </a>
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
       >
-        Directory Listing
+        🗂️ Directory Listing
       </a>
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
       >
-        Sql Injection
+        📝 Sql Injection
       </a>
       <a
-        class="my-2 bg-blue-700 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
+        class="my-2 bg-blue-700 hover:bg-blue-800 font-bold text-gray-100 px-4 py-2 rounded-xl hover:shadow hover:shadow-black grid place-items-center hover:border-double mx-5 w-48"
       >
-        XSS
+        ❎ XSS
       </a>
     </div>
-
-    <footer class="bg-white shadow mt-12 relative bottom-0 w-full border-y-1 border-gray-30 flex justify-between">
-      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
-      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
-    </footer>
+    
   </body>
+  <footer class="bg-white shadow mt-12 relative bottom-0 w-full border-y-1 border-gray-30 flex justify-between">
+    <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
+    <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600"></a>
+  </footer>
 </html>
