--- a/flask_page/templates/XSS_Bypass_result.html
+++ b/flask_page/templates/XSS_Bypass_result.html
@@ -21,44 +21,34 @@
     </style>
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
-    <header class="bg-white shadow">
+    <header class="bg-white shadow shadow-lg relative">
       <nav
         class="container mx-auto px-6 py-3 flex justify-between items-center"
       >
-        <a href="/" class="text-3xl font-bold text-blue-600">WVA</a>
+        <a href="/" class="text-3xl font-bold text-lime-600">WVA</a>
         <div class="space-x-4">
           <a
             href="{{ url_for('input_tag_bp.input_tag') }}"
-            class="text-blue-600 font-bold"
-            >Input Tag Crawl</a
-          >
-          <a
-            href="{{ url_for('comments_bp.comments') }}"
-            class="text-gray-500 hover:text-blue-600 font-bold"
-            >Comments Crawl</a
-          >
-          <a
-            href="/method-check"
-            class="text-gray-500 hover:text-blue-600 font-bold"
-            >Method Check</a
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >Site-Info Crawl</a
           >
           <a
             href="/directory-listing"
-            class="text-gray-500 hover:text-blue-600 font-bold"
-            >Directory Listing</a
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >File Vulnerability</a
           >
           <a
             href="/sql-injection"
-            class="text-gray-500 hover:text-blue-600 font-bold"
+            class="text-gray-500 hover:text-lime-600 font-bold"
             >Sql Injection</a
           >
-          <a href="{{ url_for('XSS_Bypass_bp.XSS') }}" class="text-gray-500 hover:text-blue-600 font-bold"
+          <a href="{{ url_for('XSS_Bypass_bp.XSS') }}" class="text-gray-500 hover:text-lime-600 font-bold"
             >XSS</a
           >
         </div>
       </nav>
     </header>
-    <h1 class="font-bold text-blue-600 text-3xl flex justify-center m-5">
+    <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
       XSS Crawl Result
     </h1>
     <p class="flex justify-center text-gray-500">
@@ -68,12 +58,12 @@
       <div class="flex flex-col mx-5 justify-center">
         <a
           href="{{ url_for('XSS_Bypass_bp.XSS') }}"
-          class="my-2 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          class="my-2 bg-lime-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
           >Go back to Input Tag Crawl Page</a
         >
         <a
           href="/"
-          class="mt-2 mb-4 bg-blue-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
+          class="mt-2 mb-4 bg-lime-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
           >Go back to Home Page</a
         >
       </div>
@@ -82,7 +72,7 @@
     {{ result_html|safe }}
     <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-300 flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
-      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-blue-600">🔼TOP</a>
+      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600">🔼TOP</a>
     </footer>
   </body>
 </html>
