--- a/flask_page/templates/input_tag.html
+++ b/flask_page/templates/input_tag.html
@@ -1,3 +1,5 @@
+<!--This page is 'site info crawl'-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -76,11 +78,18 @@
             >Go back to Home Page</a
           >
         </p>
+          <div id="loading" class="hidden animate-spin rounded-full h-20 w-20 border-t-2 border-b-2 border-green-500 mt-16 mx-auto"></div>
       </form>
     </div>
+    
     <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
       <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600"></a>
     </footer>
+    <script>
+        document.querySelector('form').addEventListener('submit', function() {
+            document.getElementById('loading').classList.remove('hidden');
+        });
+    </script>
   </body>
 </html>
