--- a/flask_page/templates/input_tag_result.html
+++ b/flask_page/templates/input_tag_result.html
@@ -81,12 +81,13 @@
     <br  />
 
     {% for page_info in pages_info %}
-    <div class="page-info mx-5">
-      <p class="hover:shadow hover:shadow-black bg-lime-600 hover:bg-lime-800 font-bold text-lg text-white rounded-md px-4 py-2 mx-10 cursor-pointer" 
+    <div class="page-info">
+      <p class="font-bold text-lg rounded-md px-4 py-2 mx-10 cursor-pointer" 
       onclick="toggleContent('content_{{ loop.index }}')">
       ▫️ {{ page_info['url'] }}
       </p>
-      <div id="content_{{ loop.index }}" class="hidden bg-lime-50 border-lime-200 border-2 p-2 rounded-md mx-10">
+      <hr />
+      <div id="content_{{ loop.index }}" class="hidden bg-lime-100 border-lime-200 border-2 p-2 rounded-md mx-10 mt-5">
         <a href="{{ page_info['url'] }}" target="_blank" rel="noopener noreferrer" class="my-2"><strong>🔗 URL:</strong> {{ page_info['url'] }}</a>
         <div>
           <details><summary class="my-2 font-bold cursor-pointer">✏️ Input Tags</summary>
@@ -108,6 +109,32 @@
           <p class="mb-4">No Comments found.</p></details>
           {% endif %}
         </div>
+
+        <div>
+          <details><summary class="my-2 font-bold cursor-pointer">💬 Form Method</summary>
+          {% if page_info['forms'] %} {% for form_info in page_info['forms']
+          %}
+          <div class="mb-5">
+            <h4 class="text-lg mb-2">Form Action: {{ form_info['action'] }}</h4>
+            <p class="mb-2">Method: {{ form_info['method'] }}</p>
+            <div class="flex">
+              <div class="mr-5">
+                <h5 class="text-md mb-2">GET Request:</h5>
+                <p>Status Code: {{ form_info['response']['GET']['status_code'] }}</p>
+                <p>Response Content: {{ form_info['response']['GET']['content'] }}</p>
+              </div>
+              <div>
+                <h5 class="text-md mb-2">POST Request:</h5>
+                <p>Status Code: {{ form_info['response']['POST']['status_code'] }}</p>
+                <p>Response Content: {{ form_info['response']['POST']['content'] }}</p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        {% else %}
+          <p>No forms found.</p>
+        {% endif %}
+
       </div>
     </div>
     {% endfor %}
