--- a/flask_page/templates/index.html
+++ b/flask_page/templates/index.html
@@ -9,5 +9,6 @@
     <h1>Web Vulnerability Analysis</h1>
     <a href="{{ url_for('input_tag_bp.input_tag') }}">Input Tag Analysis</a>
     <a href="{{ url_for('comments_bp.comments') }}">Comments Analysis</a>
+    <a href="{{ url_for('directory_bp.directory') }}">Directory Analysis</a>
   </body>
 </html>
