--- a/flask_page/templates/directory.html
+++ b/flask_page/templates/directory.html
@@ -3,15 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Directory Analysis</title>
+    <title>WVA Tools</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      .grid-cell {
+        width: 100px;
+        height: 100px;
+      }
+    </style>
   </head>
-  <body>
-    <h1>Directory Analysis</h1>
-    <form method="post" action="{{ url_for('directory_bp.directory') }}">
-      <label for="url">Enter URL:</label>
-      <input type="text" id="url" name="url" required />
-      <button type="submit">Submit</button>
-      <p><a href="/">Go back to Home Page</a></p>
-    </form>
+  <body class="bg-gray-50 text-gray-900 font-sans">
+    <header class="bg-white shadow shadow-lg relative">
+      <nav
+        class="container mx-auto px-6 py-3 flex justify-between items-center"
+      >
+        <a href="/" class="text-3xl font-bold text-lime-600">WVA</a>
+        <div class="space-x-4">
+          <a
+            href="{{ url_for('input_tag_bp.input_tag') }}"
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >Site-Info Crawl</a
+          >
+          <a
+            href="{{ url_for('directory_bp.directory') }}"
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >File Vulnerability</a
+          >
+          <a
+            href="/sql-injection"
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >Sql Injection</a
+          >
+        </div>
+      </nav>
+    </header>
+    <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
+      File Vulnerability
+    </h1>
+    <p class="flex justify-center text-gray-500 m-5 text-center">
+      Please enter the URL you want to check.
+
+
+    </p>
+    <div class="flex justify-center w-screeen">
+      <form method="post" action="{{ url_for('directory_bp.directory') }}">
+        <label for="url" class="my-5 font-bold">Enter URL:</label>
+        <div class="relative box-border mt-5 mb-2">
+          <input
+            class="font-bold border-b-4 border-lime-600 w-96 h-8 rounded-full outline-0 bg-gray-200 px-5"
+            type="text"
+            id="url"
+            name="url"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="mb-4 bg-lime-600 hover:bg-lime-800 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
+        >
+          Submit
+        </button>
+        <p>
+          <a
+            href="/"
+            class="my-2 bg-lime-600 hover:bg-lime-800 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black"
+            >Go back to Home Page</a
+          >
+        </p>
+      </form>
+    </div>
+    <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
+      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
+      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600"></a>
+    </footer>
   </body>
 </html>
