--- a/flask_page/templates/XSS_Bypass_result.html
+++ b/flask_page/templates/XSS_Bypass_result.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WVA Tools</title>
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
@@ -14,7 +18,7 @@
         width: 100px;
         height: 100px;
       }
-      h2{
+      h2 {
         font-size: 1.125rem;
         line-height: 1.75rem;
       }
@@ -28,38 +32,43 @@
         <a href="/" class="text-3xl font-bold text-lime-600">WVA</a>
         <div class="space-x-4">
           <a
-            href=""
+            href="{{ url_for('input_tag_bp.input_tag') }}"
             class="text-gray-500 hover:text-lime-600 font-bold"
             >Site-Info Crawl</a
           >
           <a
-            href="/directory-listing"
+            href="{{ url_for('directory_bp.directory') }}"
             class="text-gray-500 hover:text-lime-600 font-bold"
             >File Vulnerability</a
           >
           <a
-            href="/sql-injection"
+            href="/SQL_Payload"
             class="text-gray-500 hover:text-lime-600 font-bold"
             >Sql Injection</a
           >
-          <a href="{{ url_for('XSS_Bypass_bp.XSS') }}" class="text-gray-500 hover:text-lime-600 font-bold"
-            >XSS</a
+          <a
+            href="{{ url_for('XSS_Bypass_bp.XSS') }}"
+            class="text-lime-600 font-bold"
+            >XSS[B]</a
+          >
+          <a href="xss-p" class="text-gray-500 hover:text-lime-600 font-bold"
+            >XSS[P]</a
           >
         </div>
       </nav>
     </header>
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
-      XSS Crawl Result
+      XSS Bypass Check Result
     </h1>
     <p class="flex justify-center text-gray-500">
-      필터링필터링필터링
+      Here's XSS Bypass check results.
     </p>
     <div class="flex flex-row justify-center">
       <div class="flex flex-col mx-5 justify-center">
         <a
           href="{{ url_for('XSS_Bypass_bp.XSS') }}"
           class="my-2 bg-lime-600 font-bold text-gray-100 px-4 py-2 rounded-full hover:shadow hover:shadow-black justify-center text-center"
-          >Go back to Input Tag Crawl Page</a
+          >Go back to XSS Bypass Check Page</a
         >
         <a
           href="/"
@@ -68,11 +77,9 @@
         >
       </div>
     </div>
-    <hr  />
-    <pre>{{ Bypass_result | safe }}</pre>
-    <footer class="bg-white shadow mt-12 fixed bottom-0 w-full border-y-1 border-gray-300 flex justify-between">
-      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
-      <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600">🔼TOP</a>
-    </footer>
+    <hr />
+    <pre class="mx-5 p-5 bg-lime-100 rounded-md font-bold font-sans">
+      {{ Bypass_result | safe }}
+    </pre>
   </body>
 </html>
