--- a/flask_page/templates/directory.html
+++ b/flask_page/templates/directory.html
@@ -1,4 +1,3 @@
-<!--This page is 'site info crawl'-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WVA Tools</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .grid-cell {
@@ -14,24 +17,21 @@
       }
     </style>
   </head>
-
   <body class="bg-gray-50 text-gray-900 font-sans">
-    <!--Header navigation bar-->
     <header class="bg-white shadow shadow-lg relative">
-      <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-        <!--WVA logo-->
+      <nav
+        class="container mx-auto px-6 py-3 flex justify-between items-center"
+      >
         <a href="/" class="text-3xl font-bold text-lime-600">WVA</a>
-
-        <!--Go to site buttons-->
         <div class="space-x-4">
           <a
             href="{{ url_for('input_tag_bp.input_tag') }}"
-            class="text-lime-600 font-bold"
+            class="text-gray-500 hover:text-lime-600 font-bold"
             >Site-Info Crawl</a
           >
           <a
             href="{{ url_for('directory_bp.directory') }}"
-            class="text-gray-500 hover:text-lime-600 font-bold"
+            class="text-lime-600 font-bold"
             >File Vulnerability</a
           >
           <a
@@ -52,18 +52,16 @@
         </div>
       </nav>
     </header>
-
-    <!--Body content-->
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
-      Site-Info Crawl
+      File Vulnerability
     </h1>
     <p class="flex justify-center text-gray-500 m-5 text-center">
-      It will crawl all linked website with dfs algorithm.<br>
-      So, it may take some minute.
+      Please enter the URL you want to check.
+
+
     </p>
     <div class="flex justify-center w-screeen">
-      <!--Url input form-->
-      <form method="post" action="{{ url_for('input_tag_bp.input_tag') }}">
+      <form method="post" action="{{ url_for('directory_bp.directory') }}">
         <label for="url" class="my-5 font-bold">Enter URL:</label>
         <div class="relative box-border mt-5 mb-2">
           <input
@@ -87,22 +85,23 @@
             >Go back to Home Page</a
           >
         </p>
-          <!--Loading circle animation-->
-          <div id="loading" class="hidden animate-spin rounded-full h-20 w-20 border-t-2 border-b-2 border-green-500 mt-16 mx-auto"></div>
+
+        <!--Loading circle animation-->
+        <div id="loading" class="hidden animate-spin rounded-full h-20 w-20 border-t-2 border-b-2 border-green-500 mt-16 mx-auto"></div>
+
       </form>
     </div>
+    
+    <!--Loading circle animation script-->
+    <script>
+      document.querySelector('form').addEventListener('submit', function() {
+          document.getElementById('loading').classList.remove('hidden');
+      });
+    </script>
 
-    <!--Team logo-->
     <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
       <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
       <a href="javascript:window.scrollTo(0,0);" class="grid place-items-center mx-5 font-bold text-lg hover:text-lime-600"></a>
     </footer>
-    
-    <!--Loading circle animation script-->
-    <script>
-        document.querySelector('form').addEventListener('submit', function() {
-            document.getElementById('loading').classList.remove('hidden');
-        });
-    </script>
   </body>
 </html>
