--- a/flask_page/templates/xss.html
+++ b/flask_page/templates/xss.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WVA Tools</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -31,26 +32,36 @@
             >Site-Info Crawl</a
           >
           <a
-            href="/directory-listing"
+            href="{{ url_for('directory_bp.directory') }}"
             class="text-gray-500 hover:text-lime-600 font-bold"
             >File Vulnerability</a
           >
           <a
-            href="/sql-injection"
+            href="/SQL_Payload"
             class="text-gray-500 hover:text-lime-600 font-bold"
             >Sql Injection</a
           >
-          <a href="{{ url_for('XSS_Bypass_bp.XSS') }}" class="text-gray-500 hover:text-lime-600 font-bold"
-            >XSS</a
+          <a
+            href="{{ url_for('XSS_Bypass_bp.XSS') }}"
+            class="text-lime-600 font-bold"
+            >XSS[B]</a
+          >
+          <a
+            href="xss-p"
+            class="text-gray-500 hover:text-lime-600 font-bold"
+            >XSS[P]</a
           >
         </div>
       </nav>
     </header>
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
-      XSS Vulnerability Check
+      XSS Bypass Vulnerability Check
     </h1>
-    <p class="flex justify-center text-gray-500 m-5 text-center">
-      It Needs Payload and Parameter
+    <p class="flex justify-center text-gray-500 mt-5 text-center">
+      It needs payload and parameter.
+    </p>
+    <p class="flex justify-center text-gray-500 mb-5 text-center">
+      And may needs cookies.
     </p>
     <div class="flex justify-center w-screeen">
       <form id="xssForm" method="post" action="{{ url_for('XSS_Bypass_bp.XSS') }}">
@@ -141,11 +152,20 @@
             >Go back to Home Page</a
           >
         </p>
+
+        <!--Loading circle animation-->
+        <div id="loading" class="hidden animate-spin rounded-full h-20 w-20 border-t-2 border-b-2 border-green-500 mt-16 mx-auto"></div>
+
       </form>
+
     </div>
-    <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
-      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
-    </footer>
+    
+    <!--Loading circle animation script-->
+    <script>
+      document.querySelector('form').addEventListener('submit', function() {
+          document.getElementById('loading').classList.remove('hidden');
+      });
+  </script>
 
     <!--cookie script-->
     <script>
@@ -176,5 +196,8 @@
         });
       });
     </script>
+    <footer class="mt-12 fixed bottom-0 w-full flex justify-between">
+      <img src="{{ url_for('static', filename='img/2024WVA.png') }}", width="200px"></img>
+    </footer>
   </body>
 </html>
