--- a/flask_page/templates/directory_result.html
+++ b/flask_page/templates/directory_result.html
@@ -76,10 +76,10 @@
 
     <!--Body contents-->
     <h1 class="font-bold text-lime-600 text-3xl flex justify-center m-5">
-      Site-Info Crawl Result
+      File Vulnerability Check Result
     </h1>
     <p class="flex justify-center text-gray-500">
-      Result of crawling the site with the dfs algorithm.
+      Lists the url for which the response came.
     </p>
     <div class="flex flex-row justify-center">
       <div class="flex flex-col mx-5 justify-center">
